--- a/services/mobileDistriTV/app/src/main/res/layout/activity_image.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/activity_image.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".imageview.ImageActivity">
+    tools:context=".ui.image.ImageActivity">
 
     <ImageView
         android:id="@+id/imageContainer"
@@ -22,6 +22,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintHorizontal_bias="1.0"/>
+        app:layout_constraintHorizontal_bias="1.0"
+        android:visibility="invisible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
