integration with api

--- a/services/mobileDistriTV/app/src/main/res/layout/activity_home.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/activity_home.xml
@@ -6,37 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeActivity">
 
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/home_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:layout_height="match_parent"/>
 
-    <Button
-        android:id="@+id/btnDownload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/main_btn_download"
-        android:layout_marginVertical="20dp"/>
 
-    <Button
-        android:id="@+id/btnPlay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/main_btn_play"
-        android:layout_marginVertical="20dp"/>
-
-        <Button
-            android:id="@+id/btnPlayVideo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Video"
-            android:layout_marginVertical="20dp"/>
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
