--- a/services/mobileDistriTV/app/src/main/res/layout/activity_image.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/activity_image.xml
@@ -16,7 +16,7 @@
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/image_btn_back"
+        android:text="@string/btn_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
