--- a/services/mobileDistriTV/app/src/main/res/layout/activity_image.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/activity_image.xml
@@ -6,23 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.image.ImageActivity">
 
-    <ImageView
-        android:id="@+id/imageContainer"
+    <FrameLayout
+        android:id="@+id/image_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitCenter"/>
-
-    <Button
-        android:id="@+id/btnBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintHorizontal_bias="1.0"
-        android:visibility="invisible"/>
+        android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
