--- a/services/mobileDistriTV/app/src/main/res/layout/list_item_content.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/list_item_content.xml
@@ -2,24 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:layout_margin="1dp"
-
+        android:theme="@style/Theme.MaterialComponents.DayNight.Bridge"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:theme="@style/Theme.MaterialComponents.DayNight.Bridge"
-
-        >
-
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/item_name"
