--- a/services/mobileDistriTV/app/src/main/res/layout/activity_home.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/activity_home.xml
@@ -11,4 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <Button
+        android:id="@+id/probando"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Probando"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_gravity="center"
+       />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
