--- a/services/mobileDistriTV/app/src/main/res/layout/fragment_text.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/fragment_text.xml
@@ -9,6 +9,10 @@
         android:id="@+id/text_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitCenter"/>
+        android:scaleType="fitCenter"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:background="#ffffff"
+        android:autoSizeTextType="uniform"/>
 
 </FrameLayout>
