--- a/services/mobileDistriTV/app/src/main/res/layout/fragment_video.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/fragment_video.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.VideoPlaybackFragment">
+    tools:context=".ui.VideoFragment">
 
     <VideoView
         android:id="@+id/video_container"
