--- a/services/mobileDistriTV/app/src/main/res/layout/activity_home.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/activity_home.xml
@@ -20,8 +20,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        android:visibility="invisible">
+        app:layout_constraintVertical_bias="0.0" >
 
         <TextView
             android:id="@+id/id_information_display"
