--- a/services/mobileDistriTV/app/src/main/res/layout/fragment_device_info.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/fragment_device_info.xml
@@ -32,7 +32,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/button_id"
+        android:id="@+id/register_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/device_info_register_button"
