androidApp: separation HomeActivity / ContentPlayerActivity
- separation HomeActivity / ContentPlayerActivity
- Content parcelable object as a param between schedule and launcher playback

--- a/services/mobileDistriTV/app/src/main/res/layout/fragment_device_info.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/fragment_device_info.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.DeviceInfoFragment">
+    tools:context=".ui.home.DeviceInfoFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
