--- a/services/mobileDistriTV/app/src/main/res/layout/activity_content_player.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/activity_content_player.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeActivity">
+    tools:context=".ui.player.ContentPlayerActivity">
 
     <FrameLayout
-        android:id="@+id/home_fragment_container"
+        android:id="@+id/player_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
