--- a/services/mobileDistriTV/app/src/main/res/layout/fragment_device_info.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/fragment_device_info.xml
@@ -28,7 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="text"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:maxLength="6" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
