--- a/services/mobileDistriTV/app/src/main/res/layout/fragment_home.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/fragment_home.xml
@@ -10,28 +10,50 @@
         android:id="@+id/image_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitCenter"/>
+        android:scaleType="fitCenter" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/id_information_card"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/id_information_display"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:autoSizeTextType="uniform"
-            android:background="#D3D3D3"
-            android:gravity="center"
-            android:scaleType="fitCenter"
-            android:textColor="#000000" />
-    </androidx.cardview.widget.CardView>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/information_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_marginBottom="16dp"
+            android:background="@color/dark_green"
+            android:contentDescription="@string/app_name"
+            android:padding="2dp"
+            android:src="@drawable/info_100"
+            app:backgroundTint="@color/dark_green"
+            app:elevation="6dp"
+            app:pressedTranslationZ="12dp"
+            app:shapeAppearanceOverlay="@style/FabCircle"
+            app:tint="@color/white" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/information_card"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_margin="8dp"
+            app:cardBackgroundColor="@color/light_gray"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="6dp"
+            app:contentPadding="10dp">
+
+            <LinearLayout
+                android:id="@+id/card_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"/>
+
+        </androidx.cardview.widget.CardView>
+
+
+    </LinearLayout>
+
 
 </FrameLayout>
