--- a/services/mobileDistriTV/app/src/main/res/values/colors.xml
+++ b/services/mobileDistriTV/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="dark_green">#00635D</color>
+    <color name="light_gray">#D3D3D3</color>
 </resources>
