--- a/services/mobileDistriTV/app/src/main/res/layout/fragment_home.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/fragment_home.xml
@@ -54,7 +54,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/app_name"
                     android:textColor="@color/black"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:id="@+id/card_content"
@@ -66,16 +66,16 @@
                     android:id="@+id/version_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginVertical="1.5dp">
+                    android:layout_marginVertical="1.5dp"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/version_key"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="5dp"
                         android:text="@string/info_card_version"
-                        android:textColor="@color/black"
-                        android:layout_marginEnd="5dp"/>
+                        android:textColor="@color/black" />
 
                     <TextView
                         android:id="@+id/version_value"
@@ -89,16 +89,16 @@
                     android:id="@+id/tv_code_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginVertical="1.5dp">
+                    android:layout_marginVertical="1.5dp"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/tv_code_key"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="5dp"
                         android:text="@string/info_card_tv_code"
-                        android:textColor="@color/black"
-                        android:layout_marginEnd="5dp"/>
+                        android:textColor="@color/black" />
 
                     <TextView
                         android:id="@+id/tv_code_value"
@@ -112,16 +112,17 @@
                     android:id="@+id/connection_status_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginVertical="1.5dp">
+                    android:layout_marginVertical="1.5dp"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/connection_status_key"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="5dp"
                         android:text="@string/info_card_connection_status"
-                        android:textColor="@color/black"
-                        android:layout_marginEnd="5dp"/>
+                        android:textColor="@color/black" />
+
                     <LinearLayout
                         android:id="@+id/connection_status_value"
                         android:layout_width="wrap_content"
@@ -134,10 +135,10 @@
                     android:id="@+id/divider"
                     android:layout_width="180dp"
                     android:layout_height="1dp"
-                    android:layout_weight="1"
                     android:layout_marginVertical="5dp"
-                    android:backgroundTint="@color/black"
-                    android:background="?android:attr/listDivider" />
+                    android:layout_weight="1"
+                    android:background="?android:attr/listDivider"
+                    android:backgroundTint="@color/black" />
 
                 <LinearLayout
                     android:id="@+id/language_container"
