--- a/services/mobileDistriTV/app/src/main/res/layout/fragment_home.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/fragment_home.xml
@@ -132,10 +132,11 @@
 
                 <View
                     android:id="@+id/divider"
-                    android:layout_width="180dp"
+                    android:layout_width="250dp"
                     android:layout_height="1dp"
-                    android:layout_marginVertical="5dp"
+                    android:layout_marginVertical="10dp"
                     android:layout_weight="1"
+                    android:layout_gravity="center_horizontal"
                     android:background="?android:attr/listDivider"
                     android:backgroundTint="@color/black" />
 
@@ -162,6 +163,14 @@
                         android:prompt="@string/language_select"
                         android:spinnerMode="dialog" />
                 </LinearLayout>
+
+                <com.google.android.material.switchmaterial.SwitchMaterial
+                    android:id="@+id/switchExternalStorage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/info_card_switch_external"
+                    android:textColor="@color/black"
+                    android:visibility="gone" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
