switch External Storage mejora visual

--- a/services/mobileDistriTV/app/src/main/res/layout/fragment_home.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/fragment_home.xml
@@ -167,10 +167,11 @@
                 <com.google.android.material.switchmaterial.SwitchMaterial
                     android:id="@+id/switchExternalStorage"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="10dp"
                     android:text="@string/info_card_switch_external"
                     android:textColor="@color/black"
-                    android:visibility="gone" />
+                    android:visibility="gone"
+                    app:switchPadding="5dp" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
