--- a/services/mobileDistriTV/app/src/main/res/layout/fragment_video.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/fragment_video.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.player.VideoFragment">
+    android:layout_height="match_parent">
 
-    <com.distritv.ui.player.CustomVideoView
+    <com.distritv.ui.player.content.CustomVideoView
         android:id="@+id/video_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
