--- a/services/mobileDistriTV/app/src/main/res/layout/fragment_home.xml
+++ b/services/mobileDistriTV/app/src/main/res/layout/fragment_home.xml
@@ -106,6 +106,28 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/labels_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/labels_key"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="5dp"
+                        android:text="@string/info_card_labels"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/labels_value"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/black" />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:id="@+id/connection_status_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
